Fix footer alignment

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -45,4 +45,5 @@ p {
 #footwhite {
   color: white;
   background-color: dimgray;
+  text-align: left;
 }
